tests/sksl/errors/ReservedNameStatic.glsl
### Compilation failed:

error: 1: expected an identifier, but found 'static'
1 error
